[Digitize-UI] Bug fixes - 2 (#533)
- Fix Error tooltip so that the first few rows having error will not
coincide with table header causing it to be cropped:
[AISERVICES-813](https://jsw.ibm.com/browse/AISERVICES-813).
- Add success/failure notification message upon deletion of a job/
document [AISERVICES-810](https://jsw.ibm.com/browse/AISERVICES-810).
- Fix try again on failures (Actionable Notification) and also fix CSS
to align to respective themes
[AISERVICES-811](https://jsw.ibm.com/browse/AISERVICES-811).

---------

--- a/digitize-ui/src/pages/JobMonitorPage/JobMonitorPage.module.scss
+++ b/digitize-ui/src/pages/JobMonitorPage/JobMonitorPage.module.scss
@@ -17,6 +17,26 @@
     .cds--inline-notification {
       margin-bottom: 0;
     }
+    
+    .cds--toast-notification {
+      margin-bottom: 0;
+      background-color: var(--cds-notification-background-success);
+      color: var(--cds-text-primary);
+      
+      .cds--toast-notification__title {
+        color: var(--cds-text-primary);
+      }
+      
+      .cds--toast-notification__subtitle {
+        color: var(--cds-text-secondary);
+      }
+      
+      .cds--toast-notification__close-button {
+        svg {
+          fill: var(--cds-icon-primary);
+        }
+      }
+    }
   }
 }
 
